# alma_geryon

./: CMakeLists.txt  Kconfig  README.rst  app_version.h.in  geryon_g071.overlay  prj.conf  sample.yaml
boards/arm/geryon_g071/: Kconfig.board  Kconfig.defconfig  arduino_r3_connector.dtsi  geryon_g071.dts  geryon_g071.yaml
dts/bindings/io/: alma,input.yaml  alma,output.yaml
src/: app_event_manager.c  app_event_manager.h  cmon.c  cmon.h  common.c  common.h  cset.c  cset.h  io.c  io.h  main.c  main.h  mcp466.c  mcp466.h  protocol.c  protocol.h  pwm.c  pwm.h  pwm_gpio.c  pwm_gpio.h
